--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
 </head>
 <body>
   <link rel="stylesheet" type="text/css" href="http://cdn.datatables.net/1.10.11/css/jquery.dataTables.min.css">
-  <link rel="stylesheet" type="text/css" href="../main.min.css">
+  <link rel="stylesheet" type="text/css" href="../bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="../fonts.min.css">
   <link rel="stylesheet" type="text/css" href="../jquery.dynatable.css">
+  <link rel="stylesheet" type="text/css" href="../main.min.css">
 
-<h1><center> Crime in Baltimore <center></h1>
+
+
+
+<center><h1 class="trb_outfit_primaryItem_article_title trb_outfit_featuredArticleTitle"> Crime in Baltimore </h1><center>
 
   <p> <center> Crime in Baltimore continues to rise. Shootings and murders are the norm these days, and many parts of the city are not safe for most people. The map below displays all of the shootings and homicides in the past few years. The data is from the Baltimore's "Open Baltimore" initiative. All of the CCTV cameras in the city are also plotted on the map in blue for reference.</center></p>
 
